--- a/app/components/Icon/Icon.css
+++ b/app/components/Icon/Icon.css
@@ -1,16 +1,34 @@
 .icon-outer {
-  height: 65px;
-  width: 65px;
-  border: 2px solid #fff;
+  padding: 5px;
+  height: 75px;
+  width: 75px;
+}
+.icon-count {
+  position: absolute;
+  right: 2px;
+  top: 2px;
+  background: #fff;
+  border: 1px solid #444;
+  border-radius: 47%;
+  padding: 3px;
+  font-size: 10px;
+  text-align: center;
+  color: #444;
+  box-shadow: 0px 0px 3px #8888889e;
+  width: 22px;
+  height: 22px;
+}
+.icon-inner {
+  height: 100%;
+  width: 100%;
   border-radius: 50%;
   cursor: pointer;
   background-color: #3a434c;
-  box-shadow: 0px 0px 3px #8888889e;
 }
-.icon-inner {
+.icon-logo {
   background-size: 130px;
   background-repeat: no-repeat;
-  background-position: 2px 9px;
+  background-position: 2px 12px;
   background-image: url(https://files.readme.io/SerzaW6yR7gV3G1Ls9Uy_logo-permutive.png);
   width: 40px;
   height: 100%;
